2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/block/AbstractBlock.java
	(getBorder): Removed, previously deprecated,
	(setBorder(BlockBorder)): Likewise,
	(setBorder(double, double, double, double)): Likewise,
	* source/org/jfree/chart/title/PaintScaleLegend.java
	(draw(Graphics2D, Rectangle2D, Object)): Fixed deprecation warnings,
	* tests/org/jfree/chart/title/junit/CompositeTitleTests.java
	(testEquals): Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/ValueAxis.java
	(DEFAULT_LOWER_BOUND): Removed, previously deprecated,
	(DEFAULT_UPPER_BOUND): Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/ColorBar.java: Removed (previously 
	deprecated);
	* source/org/jfree/chart/editor/DefaultColorBarEditor.java: Likewise,
	* source/org/jfree/chart/editor/DefaultPlotEditor.java
	(colorBarAxisPropertyPanel): Removed,
	(DefaultPlotEditor(Plot)): Removed references to 
	colorBarAxisPropertyPanel,
	(updatePlotProperties): Likewise,
	* source/org/jfree/chart/plot/ContourPlot.java: Removed (previously 
	deprecated),
	* tests/org/jfree/chart/axis/junit/AxisPackageTests.java
	(suite): Removed ColorBarTests,
	* tests/org/jfree/chart/axis/junit/ColorBarTests.java: Removed 
	(previously deprecated),
	* tests/org/jfree/chart/plot/junit/ContourPlotTests.java: Likewise,
	* tests/org/jfree/chart/plot/junit/PlotPackageTests.java
	(suite): Removed ContourPlotTests.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/CategoryAxis.java
	(drawCategoryLabels): Removed (previously deprecated).

----------  JFREECHART 1.0.6 RELEASED ------------------------

2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(getSwtColorFromPool): Removed JDK 1.5 specific code.

2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>
